--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -13,6 +13,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    steps:
+    - uses: actions/checkout@v1.0.0
+    - uses: julia-actions/setup-julia@v1
+      with:
+        version: '1.4.1'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
