--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: julia-actions/setup-julia@v1
       with:
         version: '1.4.1'
+      run:
+        julia --color=yes -e 'using Pkg; Pkg.add(Pkg.PackageSpec(path="https://github.com/APLA-Toolbox/PDDL.jl"))'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
