--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -8,17 +8,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Python
     - uses: actions/checkout@v1
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
     steps:
+    - name: Install Julia
     - uses: actions/checkout@v1.0.0
     - uses: julia-actions/setup-julia@v1
       with:
         version: '1.4.1'
-      run:
+    - name: Install PDDL.jl
+      run: |
         julia --color=yes -e 'using Pkg; Pkg.add(Pkg.PackageSpec(path="https://github.com/APLA-Toolbox/PDDL.jl"))'
     - name: Install dependencies
       run: |
