--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -35,3 +35,8 @@ jobs:
       run: |
         pip install pytest
         pytest
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        name: codecov-umbrella
