--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install julia
+        python -m pip install pycall
     - name: Lint with flake8
       run: |
         python -m pip install flake8
