--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -17,10 +17,11 @@ jobs:
     - uses: julia-actions/setup-julia@v1
       with:
         version: '1.4.1'
-    - name: Install PDDL.jl
+    - name: Install Julia dependencies
       run: |
         julia --color=yes -e 'using Pkg; Pkg.add(Pkg.PackageSpec(path="https://github.com/APLA-Toolbox/PDDL.jl"))'
-    - name: Install dependencies
+        julia --color=yes -e 'using Pkg; Pkg.add(Pkg.PackageSpec(path="https://github.com/JuliaPy/PyCall.jl"))'
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install julia
