--- a/.github/workflows/pyapp.yml
+++ b/.github/workflows/pyapp.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -33,11 +32,17 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        name: codecov-umbrella
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pytest
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        run: |
+          bash <(curl -s https://codecov.io/bash) 
+        with:
+          name: codecov-umbrella
