--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest
-          pytest
+          pytest --cov=./
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
