--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,6 +1,6 @@
 name: format
 on:
-  pull_request:
+  push:
     branches: [master]
 jobs:
   format:
@@ -24,5 +24,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4.1.2
         with:
-          commit_message: Apply formatting changes
-          branch: ${{ github.head_ref }}
+          commit_message: 🎉 Apply formatting changes
+          branch: master
