--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,7 +1,7 @@
 name: format
 on:
-  push:
-    branches: [master]
+  pull_request:
+    branches: [main]
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -24,5 +24,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4.1.2
         with:
-          commit_message: 🎉 Apply formatting changes
-          branch: master
+          commit_message: Apply formatting changes
+          branch: ${{ github.head_ref }}
