--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,5 +1,5 @@
 pull_request_rules:
-  - name: Assign Guilyx as reviewer
+  - name: Assign the reviewers team
     conditions:
       - check-success=tests
       - check-success=build
@@ -7,7 +7,7 @@ pull_request_rules:
     actions:
       request_reviews:
         users:
-          - guilyx
+          - APLA-Toolbox/reviewers
   - name: Automatic merge on approval
     conditions:
       - "#approved-reviews-by>=1"
