--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install julia
-        python -m pip install pycall
+        python -m pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         python -m pip install flake8
