--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,13 +1,13 @@
 pull_request_rules:
   - name: Assign the main reviewers
     conditions:
-      - check-success=tests
       - check-success=build
       - check-success=CodeFactor
     actions:
       request_reviews:
-        teams:
-          - "@APLA-Toolbox/reviewers"
+        users:
+          - guilyx
+          - sampreets3
   - name: Automatic merge on approval
     conditions:
       - "#approved-reviews-by>=1"
