--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,7 +4,16 @@ on:
     branches: [main]
 jobs:
   format:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8, pypy-3.6]
+        exclude:
+          - os: macos-latest
+            python-version: 3.8
+          - os: windows-latest
+            python-version: 3.6
     steps:
       - uses: actions/checkout@v2
         with:
