--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, pypy-3.6]
+        os: [ubuntu-latest, macos-latest]
+        python-version: [3.6, 3.7, 3.8]
         exclude:
           - os: macos-latest
             python-version: 3.8
-          - os: windows-latest
-            python-version: 3.6
 
     steps:
     - uses: actions/checkout@v2
