--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,14 +4,7 @@ on:
     branches: [main]
 jobs:
   format:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: [3.6, 3.7, 3.8]
-        exclude:
-          - os: macos-latest
-            python-version: 3.8
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
