--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,6 +1,6 @@
 name: format
 on:
-  pull_request:
+  push:
     branches: [main]
 jobs:
   format:
@@ -25,4 +25,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4.8.0
         with:
           commit_message: Apply formatting changes
-          branch: ${{ github.head_ref }}
+          branch: main
