add ignore coverage

--- a/codecov.yml
+++ b/codecov.yml
@@ -13,7 +13,9 @@ parsers:
       loop: yes
       method: no
       macro: no
-
+ignore:
+  - "setup.py"
+  - "scripts/*"
 comment:
   layout: "reach,diff,flags,files,footer"
   behavior: default
